--- a/download.html
+++ b/download.html
@@ -2,13 +2,6 @@
 <html>
 <head>
     <style>
-        body {
-            background-color: rgb(0, 92, 26);
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-        }
-
         .nav {
             text-align: center;
             margin-top: 20px;
@@ -17,40 +10,27 @@
         .nav a {
             margin: 0 10px;
             font-size: 18px;
-            text-decoration: none !important;
+            text-decoration: none;
             color: black;
-            display: inline-block;
-            transition: transform 0.2s ease;
-            transform: scale(1.2);
         }
 
-        .nav a:hover {
-            color: rgb(0, 255, 68);
-            transform: scale(1);
-        }
-
-        .separator {
-            color: black; /* always black */
-            font-size: 20px;
-        }
-
-        h1 {
-            text-align: center;
-            color: white;
+        /* Only Download link turns red when mouse hover */
+        .nav a.download:hover {
+            color: red;
         }
     </style>
 </head>
 <body>
 
     <div class="nav">
-        <a href="HomePage.html">Home</a>
-        <span class="separator">|</span>
-        <a href="Download.html">Download</a>
-        <span class="separator">|</span>
+        <a href="index.html">Home</a> |
+        <a href="Download.html" class="download">Download</a> |
         <a href="Help.html">Help</a>
     </div>
 
-    <h1>What can I help you?</h1>
+    <h1 style="text-align:center;">
+        What are you want to download?
+    </h1>
 
 </body>
 </html>
